--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -1,3 +1,5 @@
+@import "_variables.scss";
+
 .mainContainer {
   padding-top: 100vh;
   padding-bottom: 100vh;
@@ -62,7 +64,7 @@
     left: 0;
     right: 0;
     height: 5px;
-    background: #fff;
+    background: $primary;
     bottom: 100px;
   }
 }
