--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,8 +1,20 @@
+@import "@/styles/_variables.scss";
+
 .footerContainer {
   display: flex;
   justify-content: center;
   align-items: center;
+  color: #fff;
   height: 100px;
-  background-color: #f8f9fa;
-  border-top: 1px solid #e9ecef;
+  background-color: transparent;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+
+  p {
+    font-size: 0.8rem;
+    font-weight: 600;
+    text-transform: uppercase;
+    text-align: center;
+  }
 }
