--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -10,16 +10,40 @@
     align-items: center;
     list-style: none;
 
-    a {
+    .link {
       text-decoration: none;
+
+      &:hover {
+        cursor: pointer;
+      }
+
+      @media (max-width: 768px) {
+        display: none;
+      }
     }
 
     .navItem {
       color: #fff;
-      font-size: 1.2rem;
       font-weight: 600;
       text-transform: uppercase;
       text-decoration: none;
+      position: relative;
+      transition: all 0.3s ease;
+
+      &::after {
+        content: "";
+        position: absolute;
+        bottom: -5px;
+        left: 0;
+        width: 0;
+        height: 2px;
+        background-color: #fff;
+        transition: all 0.3s ease;
+      }
+
+      &:hover::after {
+        width: 100%;
+      }
     }
   }
 }
