Update styles and components, add Footer component

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,6 @@
 // BRAND COLORS
 $primary: #991e29;
-$secondary: #18131f;
+$secondary: #e9e9e9;
 
 // BACKGROUNDS PLATES COLORS
 $background-primary: #202020;
