--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,8 +1,26 @@
+@import "@/styles/_variables.scss", "@/styles/_mixins.scss";
+
 .headerContainer {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 1rem 2rem;
+
+  .contact {
+    border: 1px solid $primary;
+    padding: toRem(10) toRem(10);
+    background-color: $primary;
+
+    &:hover {
+      cursor: pointer;
+    }
+
+    li {
+      span {
+        color: $secondary;
+      }
+    }
+  }
 
   .listItems {
     display: flex;
@@ -23,12 +41,13 @@
     }
 
     .navItem {
-      color: #fff;
+      color: $primary;
       font-weight: 600;
       text-transform: uppercase;
       text-decoration: none;
       position: relative;
       transition: all 0.3s ease;
+      font-size: 13px;
 
       &::after {
         content: "";
@@ -37,7 +56,7 @@
         left: 0;
         width: 0;
         height: 2px;
-        background-color: #fff;
+        background-color: $primary;
         transition: all 0.3s ease;
       }
 
